Added links to Ansible Roles and Docker Images

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -47,7 +47,66 @@ VSVSCPubF98=
 -----END PGP PUBLIC KEY BLOCK-----</pre>
   <p class="doc">
     <%= link_to "EZMQ", "https://colstrom.github.io/ezmq/" %> |
-    <%= link_to "Small and Crunchy", "https://colstrom.github.io/sac/" %> |
-    <%= link_to "Redislike", "https://github.com/colstrom/redislike/" %>
-  </p><!-- .doc -->
+    <%= link_to "Forge", "https://github.com/colstrom/forge/" %> |
+    <%= link_to "Redislike", "https://github.com/colstrom/redislike/" %> |
+    <%= link_to "Small and Crunchy", "https://colstrom.github.io/sac/" %>
+  </p>
+  <section>
+    <h3>Ansible Roles</h3>
+    <p class="doc">
+      <%= link_to "Ansible", "https://github.com/colstrom/ansible-ansible" %> |
+      <%= link_to "apt-repository", "https://github.com/colstrom/ansible-apt-repository" %> |
+      <%= link_to "Consul", "https://github.com/colstrom/ansible-consul" %> |
+      <%= link_to "Docker", "https://github.com/colstrom/ansible-docker" %> |
+      <%= link_to "Drone", "https://github.com/colstrom/ansible-drone" %> |
+      <%= link_to "ElasticSearch", "https://github.com/colstrom/ansible-elasticsearch" %> |
+      <%= link_to "fish", "https://github.com/colstrom/ansible-fish" %> |
+      <%= link_to "fluentd", "https://github.com/colstrom/ansible-fluentd" %> |
+      <%= link_to "Go", "https://github.com/colstrom/ansible-go" %> |
+      <%= link_to "Grafana", "https://github.com/colstrom/ansible-grafana" %> |
+      <%= link_to "InfluxDB", "https://github.com/colstrom/ansible-influxdb" %> |
+      <%= link_to "Java", "https://github.com/colstrom/ansible-java" %> |
+      <%= link_to "Jenkins", "https://github.com/colstrom/ansible-jenkins" %> |
+      <%= link_to "logrotate", "https://github.com/colstrom/ansible-logrotate" %> |
+      <%= link_to "LogStash", "https://github.com/colstrom/ansible-logstash" %> |
+      <%= link_to "MariaDB", "https://github.com/colstrom/ansible-mariadb" %> |
+      <%= link_to "MongoDB", "https://github.com/colstrom/ansible-mongodb" %> |
+      <%= link_to "monit", "https://github.com/colstrom/ansible-monit" %> |
+      <%= link_to "mosh", "https://github.com/colstrom/ansible-mosh" %> |
+      <%= link_to "node.js", "https://github.com/colstrom/ansible-nodejs" %> |
+      <%= link_to "OpenSSH", "https://github.com/colstrom/ansible-openssh" %> |
+      <%= link_to "PHP", "https://github.com/colstrom/ansible-php" %> |
+      <%= link_to "Postgresql", "https://github.com/colstrom/ansible-postgres" %> |
+      <%= link_to "Python", "https://github.com/colstrom/ansible-python" %> |
+      <%= link_to "Redis", "https://github.com/colstrom/ansible-redis" %> |
+      <%= link_to "RioFS", "https://github.com/colstrom/ansible-riofs" %> |
+      <%= link_to "Robot Sweatshop", "https://github.com/colstrom/ansible-robot-sweatshop" %> |
+      <%= link_to "Ruby", "https://github.com/colstrom/ansible-ruby" %> |
+      <%= link_to "S3QL", "https://github.com/colstrom/ansible-s3ql" %> |
+      <%= link_to "The Silver Searcher", "https://github.com/colstrom/ansible-silversearcher" %> |
+      <%= link_to "Sodium", "https://github.com/colstrom/ansible-sodium" %> |
+      <%= link_to "Squid", "https://github.com/colstrom/ansible-squid" %> |
+      <%= link_to "statsd", "https://github.com/colstrom/ansible-statsd" %> |
+      <%= link_to "Taiga", "https://github.com/colstrom/ansible-taiga" %> |
+      <%= link_to "tmate", "https://github.com/colstrom/ansible-tmate" %> |
+      <%= link_to "TokuMX", "https://github.com/colstrom/ansible-tokumx" %> |
+      <%= link_to "Upstart", "https://github.com/colstrom/ansible-upstart" %> |
+      <%= link_to "ZeroMQ", "https://github.com/colstrom/ansible-zeromq" %>
+    </p>
+  </section>
+  <section>
+    <h3>Docker Images</h3>
+    <p class="doc">
+      <%= link_to "MariaDB", "https://github.com/colstrom/docker-mariadb" %> |
+      <%= link_to "nginx+naxsi", "https://github.com/colstrom/docker-nginx-naxsi" %> |
+      <%= link_to "node.js", "https://github.com/colstrom/docker-node" %> |
+      <%= link_to "PHP", "https://github.com/colstrom/docker-php-fpm" %> |
+      <%= link_to "Redis", "https://github.com/colstrom/docker-redis" %> |
+      <%= link_to "Ruby", "https://github.com/colstrom/docker-ruby" %> |
+      <%= link_to "Ubuntu (Core)", "https://github.com/colstrom/docker-ubuntu-core" %> |
+      <%= link_to "Ubuntu (Standard)", "https://github.com/colstrom/docker-ubuntu-standard" %>
+    </p>
+  </section>
+
+  <!-- .doc -->
 </div><!-- .welcome -->
